@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/sphinx
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.188 2015/04/02 09:56:15 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.189 2015/04/08 10:50:54 idella4 Exp $
+
+*sphinx-1.3.1 (08 Apr 2015)
+
+  08 Apr 2015; Ian Delaney <idella4@gentoo.org> +sphinx-1.3.1.ebuild,
+  -sphinx-1.3-r1.ebuild, -sphinx-1.3.ebuild:
+  bump; rm prior version
 
 *sphinx-1.3-r1 (02 Apr 2015)
 
